# advent-of-code

./: .editorconfig  AOC.code-workspace  README.md  build.gradle.kts  gym.yaml
_templates/aoc/day/: example.txt  example_solution1.txt  example_solution2.txt  input.txt  prompt.js  puzzle.txt  puzzle_solution1.txt  (+5 more)
exercises/: migrate.py
exercises/2019/: 01.yaml
exercises/2020/: 01.yaml  02.yaml  03.yaml  05.yaml  06.yaml  07.yaml  08.yaml  09.yaml  10.yaml  11.yaml  12.yaml  13.yaml  15.yaml  20.yaml
exercises/2021/: 01.yaml  02.yaml  03.yaml  04.yaml  05.yaml  06.yaml  07.yaml  08.yaml  09.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  20.yaml  21.yaml  22.yaml
exercises/2022/: 01.yaml  02.yaml  03.yaml  04.yaml  05.yaml  06.yaml  07.yaml  08.yaml  09.yaml  10.yaml  11.yaml  12.yaml  14.yaml  16.yaml  17.yaml  24.yaml
exercises/2024/: 01.yaml  02.yaml
exercises/2025/: 02.yaml
python/: pyproject.toml
python/2020/: day01.py  day02.py  day05.py  day1.py  day2.py  day3.py  day4.py  day5.py  utils.py
python/projecteuler/: problem1.py
python/year2020/: day01.py  day03.py  day04.py
rust/: Cargo.toml  README.md
rust/src/: day01.rs  day02.rs  lib.rs  main.rs  prelude.rs  util.rs
rust/src/aoc2020/: day01.rs  day02.rs  day03.rs  mod.rs
rust/src/aoc2022/: day01.rs  day02.rs
rust/src/aoc2024/: day01.rs  day02.rs  mod.rs
rust/src/aoc2025/: day02.rs  mod.rs
rust/src/gym/: data.rs  mod.rs  solution.rs  test.rs  transform.rs
typescript/: package-lock.json  package.json
typescript/aoc/: index.ts
(+118 files in other folders)
